Fixed list type not appearing on iOS

--- a/public/global.css
+++ b/public/global.css
@@ -265,7 +265,11 @@ body:before {
 
 .article ul {
 	margin-left: 1.1em;
-	list-style-type: '— '
+}
+
+.article li:before {
+	margin-left: -1.2em;
+	content: '— ';
 }
 
 .article a {
